crates/slate/tests/snapshots/logical_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut hits: i32 = 0;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn mark(arg4: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    value = arg4;
    let _v0: i32 = 1;
    let _v1: i32 = unsafe { hits };
    let _v2: i32 = _v1 + _v0;
    unsafe {
        hits = _v2;
    }
    let _v3: i32 = value;
    __retval = _v3;
    let _v4: i32 = __retval;
    return _v4;
}

fn logical_and(arg2: i32, arg3: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg2;
    b = arg3;
    let _v0: i32 = a;
    let _v1: bool = _v0 != 0;
    let _v2: bool = if _v1 {
        let _v3: i32 = b;
        let _v4: i32 = mark(_v3);
        let _v5: bool = _v4 != 0;
        _v5
    } else {
        let _v6: bool = false;
        _v6
    };
    let _v7: i32 = _v2 as i32;
    __retval = _v7;
    let _v8: i32 = __retval;
    return _v8;
}

fn logical_or(arg0: i32, arg1: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg0;
    b = arg1;
    let _v0: i32 = a;
    let _v1: bool = _v0 != 0;
    let _v2: bool = if _v1 {
        let _v3: bool = true;
        _v3
    } else {
        let _v4: i32 = b;
        let _v5: i32 = mark(_v4);
        let _v6: bool = _v5 != 0;
        _v6
    };
    let _v7: i32 = _v2 as i32;
    __retval = _v7;
    let _v8: i32 = __retval;
    return _v8;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 0;
    unsafe {
        hits = _v1;
    }
    let _v2: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = 0;
    let _v4: i32 = 1;
    let _v5: i32 = logical_and(_v3, _v4);
    let _v6: i32 = unsafe { hits };
    let _v7: i32 = unsafe { printf(_v2 as *const i8, _v5, _v6) };
    let _v8: i32 = 0;
    unsafe {
        hits = _v8;
    }
    let _v9: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v10: i32 = 2;
    let _v11: i32 = 3;
    let _v12: i32 = logical_and(_v10, _v11);
    let _v13: i32 = unsafe { hits };
    let _v14: i32 = unsafe { printf(_v9 as *const i8, _v12, _v13) };
    let _v15: i32 = 0;
    unsafe {
        hits = _v15;
    }
    let _v16: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v17: i32 = 5;
    let _v18: i32 = 0;
    let _v19: i32 = logical_or(_v17, _v18);
    let _v20: i32 = unsafe { hits };
    let _v21: i32 = unsafe { printf(_v16 as *const i8, _v19, _v20) };
    let _v22: i32 = 0;
    unsafe {
        hits = _v22;
    }
    let _v23: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v24: i32 = 0;
    let _v25: i32 = 7;
    let _v26: i32 = logical_or(_v24, _v25);
    let _v27: i32 = unsafe { hits };
    let _v28: i32 = unsafe { printf(_v23 as *const i8, _v26, _v27) };
    let _v29: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v30: i32 = 0;
    let _v31: bool = _v30 != 0;
    let _v32: bool = !_v31;
    let _v33: i32 = _v32 as i32;
    let _v34: i32 = 4;
    let _v35: bool = _v34 != 0;
    let _v36: bool = !_v35;
    let _v37: i32 = _v36 as i32;
    let _v38: i32 = 9;
    let _v39: bool = _v38 != 0;
    let _v40: i32 = _v39 as i32;
    let _v41: i32 = unsafe { printf(_v29 as *const i8, _v33, _v37, _v40) };
    let _v42: i32 = 0;
    __retval = _v42;
    let _v43: i32 = __retval;
    std::process::exit(_v43 as i32);
}
